tests/paczka1/fuzzy1/10560627.err
Error in line 1: kKq A559 10,7
Error in line 10: zMK6U A986 55,1
Error in line 7: kKq A55 11,2
Error in line 15: LxuUx A182 138,1
Error in line 24: A559 A986 78,8
Error in line 36: zMK6U A986 8B,8
Error in line 37: zMK6U A559 75,1
